tests/e2e/escape-to-host-clusterscoped-matchall/ns.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 Authors of Nimbus

apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging
