tests/e2e/escape-to-host-clusterscoped-matchall/nimbus-policy-assert-ns-default.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright 2024 Authors of Nimbus

apiVersion: intent.security.nimbus.com/v1alpha1
kind: NimbusPolicy
metadata:
  name: nimbus-ctlr-gen-escape-to-host-binding
  namespace: default
  ownerReferences:
  - apiVersion: intent.security.nimbus.com/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: ClusterSecurityIntentBinding
    name: escape-to-host-binding
spec:
  rules:
  - description: A attacker can breach container boundaries and can gain access
      to the host machine
    id: escapeToHost
    rule:
      action: Block
  selector:
    matchLabels:
      app: nginx
status:
  adapterPolicies:
  - KubeArmorPolicy/nimbus-ctlr-gen-escape-to-host-binding-escapetohost-disallowchroot
  - KubeArmorPolicy/nimbus-ctlr-gen-escape-to-host-binding-escapetohost-disallowcapabilities
  - KubeArmorPolicy/nimbus-ctlr-gen-escape-to-host-binding-escapetohost-swdeploymenttools
  numberOfAdapterPolicies: 3
  status: Created
